@@ -1,3 +1,12 @@
+2010-04-15  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Adam Roben.
+
+        Add debug-minibrowser script.
+
+        * Scripts/debug-minibrowser: Copied from Scripts/run-minibrowser.
+        * Scripts/webkitdirs.pm:
+
 2010-04-15  Roland Steiner  <rolandsteiner@chromium.org>
  
         Reviewed by Dimitri Glazkov.
